# Routes/UserRouter.js
@@ -8,5 +8,6 @@ router.post('/register',UserController.register)
 
 router.get('/profile',auth,UserController.profile)
 router.post('/addFavourite',auth,UserController.addFavourite)
+router.get('/favourite',auth,UserController.getFavourite)
 
 module.exports = router
